--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,9 +17,8 @@ website:
 format:
   html:
     theme: 
-      light: flatly
-      dark: darkly
-    css: styles.css
-
-
-
+      light: [flatly, light.scss]
+      dark: [dark, light.scss]
+    embed-resources: true
+    self-contained-math: true
+    
