--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
       - icon: github
         href: https://github.com/rCarto
       - text:  "{{< fa brands mastodon >}}"
-        href: https://fosstodon.org\@rcarto
+        href: https://fosstodon.org/@rcarto
       # - icon: rss
       #   href: index.xml
 format:
